# bluebox

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  audit_next_steps.md  body.json  body_original.json  body_str.json  body_str_interpolated.json  cdp_proxy_sidecar.py  cdp_pytests_plan.md  dummy.py  dump_routine_schema.py  eval_configs.json  interpolation-migration-plan.md  interpolation-update-plan.md  og_super_discovery_agent_audit.md  plan-orchestrator-defined-outputs.md  plan.md  pyproject.toml  quickstart.py  subagents-plan-1.md  super_discovery_agent_audit.md  superdiscoveryagentplan.md  test.json  test_amtrak_sidecar.sh  test_amtrak_timing.sh  test_amtrak_timing_v2.sh  test_browser_contexts.py  test_endpoints.py  test_network_spy_integration.py  test_proxies.sh  test_sidecar_all.sh  test_sidecar_ip.sh  test_sidecar_parallel.sh  test_sidecar_vs_fetch.sh  test_timing.sh  test_toon.py
.claude/: settings.json
.github/workflows/: publish.yml  tests.yml
bluebox/: config.py
bluebox/agent_docs/: examples.md
bluebox/agents/: __init__.py  abstract_agent.py  bluebox_agent.py  docs_digger_agent.py  guide_agent.py  network_spy.py  network_spy_agent.py  path_finder_agent.py  routine_discovery_agent.py  routine_discovery_agent_beta.py  super_discovery_agent.py  terminal_agent_base.py  trace_hound_agent.py  vectorly_browser_agent.py
bluebox/cdp/: async_cdp_session.py  connection.py  file_event_writer.py
bluebox/cli/: browser_monitor.py  discover_routine.py
bluebox/data_models/: browser_agent.py  cdp.py  parameter_type.py
bluebox/endpoint_discovery/: __init__.py  analyzer.py  extractors.py  models.py  reporter.py  resolver.py
bluebox/llms/: abstract_llm_vendor_client.py  anthropic_client.py  llm_client.py  openai_client.py
bluebox/scripts/: agent_http_adapter.py  browser_monitor.py  discover_endpoints.py  discover_routine.py  discovery_http_adapter.py  execute_routine.py  run_benchmarks.py  run_bluebox_agent.py  run_bluebox_agent_tui.py  run_guide_agent.py  run_guide_agent_tui.py  run_routine_discovery_agent_beta.py  run_super_discovery_agent.py  run_vectorly_browser_agent.py  run_vectorly_browser_agent_tui.py  super_discover_routine.py
bluebox/sdk/: client.py  discovery.py  execution.py
bluebox/utils/: cli_utils.py  code_execution_sandbox.py  data_utils.py  exceptions.py  infra_utils.py  js_utils.py  llm_utils.py  logger.py  proxy_utils.py  pydantic_utils.py  terminal_agent_base.py  terminal_utils.py  tui_base.py
example_data/example_routines/: amtrak_one_way_train_search_routine.json  download_arxive_paper_routine.json  get_ip_address_routine.json  get_new_polymarket_bets_routine.json  massachusetts_corp_search_routine.json
example_routines/: get_new_polymarket_bets_routine.json  massachusetts_corp_search_routine.json  premier_league_standings_2025_live.json
guide_agent_output/tmp/: consolidated_storage_items.json  consolidated_transactions.json
legacy-web-hacker/: README.md  pyproject.toml
legacy-web-hacker/web_hacker/: __init__.py
routine_discovery_output/llm_debug/: extracted_variables.json  identified_transactions.json  (+1 more)
routines/: premier_league_standings_by_season.json  premier_league_standings_by_season_input.json
scripts/: browser_monitor.py  discover_routines.py  execute_routine.py  quickstart.py  run_docs_digger_agent.py  run_guide_agent.py  run_interaction_specialist.py  run_js_specialist.py  run_network_spy_agent.py  run_path_finder_agent.py  run_trace_hound_agent.py
src/: config.py
super_discovery_output/: routine.json  test_parameters.json
tests/: conftest.py
(+1054 files in other folders)
