# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bluebox-sdk"
version = "1.3.1"
description = "SDK for reverse engineering web apps"
readme = "README.md"
requires-python = ">=3.12.3,<3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "Vectorly", email = "contact@vectorly.app"}
]
keywords = [
    "web-scraping",
    "automation",
    "cdp",
    "chrome-devtools",
    "api-discovery",
    "reverse-engineering",
    "browser-automation",
    "sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ipykernel>=6.29.5",
    "jmespath>=1.0.1,<2",
    "anthropic>=0.77.1",
    "openai>=2.6.1",
    "prompt_toolkit>=3.0.0",
    "pydantic>=2.11.4",
    "pylint>=3.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.2.1",
    "regex>=2024.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "tldextract>=5.1.0",
    "toonify[pydantic]>=1.5.1",
    "websocket-client>=1.6.0",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
]

[project.scripts]
# Core commands
bluebox-monitor = "bluebox.scripts.browser_monitor:main"
bluebox-discover = "bluebox.scripts.discover_routine:main"
bluebox-execute = "bluebox.scripts.execute_routine:main"

# Guide agent
bluebox-guide = "bluebox.scripts.run_guide_agent:main"

# Specialist agents
bluebox-network-spy = "bluebox.scripts.specialists.run_network_spy:main"
bluebox-trace-hound = "bluebox.scripts.specialists.run_trace_hound:main"
bluebox-js-specialist = "bluebox.scripts.specialists.run_js_specialist:main"
bluebox-interaction-specialist = "bluebox.scripts.specialists.run_interaction_specialist:main"
bluebox-docs-digger = "bluebox.scripts.specialists.run_docs_digger:main"

# Dev tools
bluebox-benchmarks = "bluebox.scripts.run_benchmarks:main"

[project.urls]
Homepage = "https://vectorly.app"
Documentation = "https://github.com/VectorlyApp/bluebox-sdk#readme"
Repository = "https://github.com/VectorlyApp/bluebox-sdk"
Issues = "https://github.com/VectorlyApp/bluebox-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["bluebox"]

[tool.hatch.build.targets.sdist]
include = [
    "/bluebox",
    "/tests",
    "/example_data/example_routines",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::pytest.PytestConfigWarning",
]
