[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-hacker"
version = "1.3.2"
description = "Renamed to bluebox. This package is a compatibility shim."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Vectorly", email = "contact@vectorly.app"}
]
dependencies = ["bluebox-lib>=1.3.1"]

[project.urls]
Homepage = "https://vectorly.app"
Repository = "https://github.com/VectorlyApp/bluebox"

[tool.hatch.build.targets.wheel]
packages = ["web_hacker"]
